# structural_landmarks

./: .gitignore  README.md  copy_server.py
atlas/: atlas_utils.py
atlas/atlas_test/: IXI_20-30.txt  IXI_20-40.txt  IXI_20-80.txt  IXI_20-90.txt  IXI_30-40.txt  IXI_40-50.txt  IXI_40-60.txt  IXI_50-60.txt  IXI_60-70.txt  IXI_60-80.txt  IXI_60-90.txt  IXI_70-80.txt  IXI_70-90.txt  IXI_80-90.txt
atlas/atlas_test/sorted/: IXI_20-30.txt  IXI_20-40.txt  IXI_20-80.txt  IXI_20-90.txt  IXI_30-40.txt  IXI_40-50.txt  IXI_40-60.txt  IXI_50-60.txt  IXI_60-70.txt  IXI_60-80.txt  IXI_60-90.txt  IXI_70-80.txt  IXI_70-90.txt  IXI_80-90.txt  probabilistic_atlas_averaged.nii
atlas/hippocampus/left/: atlas_sides.py
atlas/hippocampus/left/output/IXI_20-80/: probabilistic_atlas_averaged_landmarks.txt
atlas/hippocampus/right/: atlas_sides.py
atlas/hippocampus/right/output/IXI_20-80/: probabilistic_atlas_averaged_landmarks.txt
descriptor_level_scripts/: feature_extraction.py  fit_classifier.py  generate_descriptors_attributes.py  grid_svc.py  imgs.csv  imgs_data.csv  main.py  match_all_landmarks.py  prediction.py  run_landmarks_selection.py  structural_descriptors.py  train_test_split.py  utils.py
experiment_cmpb/splits/: test_0.csv  test_1.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_5.csv  train_6.csv  train_7.csv  train_8.csv  train_9.csv  validation_0.csv  validation_1.csv  validation_2.csv  validation_3.csv  validation_4.csv  validation_7.csv  validation_9.csv
figures/: cross_validation.eps  roc_final.eps
image_level_scripts/: ROC_curve.ipynb  ROC_curve.py  classification_concatenated_features.py  get_best_worst_subjects.py  get_image_train_test_data.py  main.py  plots3D.py  scripts_order.txt  table_results.ipynb  table_results.py
preprocessing_scripts/: fast_adni.py  join_descriptors.py  land_adni.py  land_adni_tissues.py  landmark_detection.py  landmark_detection_prob_maps.py  pc_adni.py  pc_ixi.py  pipeline.md  pipeline.txt
src/: CMakeLists.txt
src/crop_mask/: CMakeLists.txt  main.cpp
src/dilate_mask/: CMakeLists.txt  main.cpp
src/filterbank/: CMakeLists.txt  __main.cpp  __test.cpp  loggaborfilterbank.cpp  loggaborfilterbank.hpp
src/glcm_landmarks/: CMakeLists.txt  main (copy).cpp  main.cpp  main_offset.cpp
src/glcm_landmarks/old/: CMakeLists.txt  bipMiscellaneous.h  bipUtils.h  main.cpp  main_offset.cpp
src/landmarks/: CMakeLists.txt
src/landmarks/atlas/: CMakeLists.txt
src/landmarks/atlas/average/: CMakeLists.txt  __main.cpp  __test.cpp  atlassample.cpp  atlassample.hpp  averagelandmarkatlas.cpp  averagelandmarkatlas.hpp
src/landmarks/atlas/probabilistic/: CMakeLists.txt  __main.cpp  __test.cpp  probabilisticlandmarkatlas.cpp  probabilisticlandmarkatlas.hpp
src/landmarks/description/: __main.cpp  landmarkdetector.cpp  landmarkdetector.hpp
src/landmarks/description_fast/: CMakeLists.txt
src/landmarks/description_fast00/: __main.cpp  landmarkdetector.cpp  landmarkdetector.hpp
src/landmarks/detection/: CMakeLists.txt  __main.cpp  __test.cpp  landmarkdetector.cpp  landmarkdetector.hpp
src/landmarks/io/: CMakeLists.txt  __test.cpp  landmarkio.cpp  landmarkio.hpp
src/landmarks/matching/: CMakeLists.txt  __main (copy).cpp  __test.cpp  matchlandmarks (copy).cpp  matchlandmarks.cpp  matchlandmarks.hpp  matchlandmarks_wrong.cpp
src/landmarks/matching_maxd_prob/: CMakeLists.txt  __main.cpp  matchlandmarks.cpp  matchlandmarks.hpp
src/landmarks/registration/: CMakeLists.txt  __main.cpp  __test.cpp  landmarkguidedregistration.cpp  landmarkguidedregistration.hpp
src/phasecongruency/: CMakeLists.txt  __main.cpp  __test.cpp  phasecongruency.cpp  phasecongruency.hpp  phasecongruency_0.cpp
src/rl_landmarks/: CMakeLists.txt  main (copy).cpp  main.cpp  main_crop.cpp
src/rl_landmarks/Untitled Folder/: CMakeLists.txt  run_length_parallel.cxx  run_length_parallel_bkp.cxx
src/sliceImage/: CMakeLists.txt  main.cpp
src/utilities/: CMakeLists.txt
src/utilities/debug/: CMakeLists.txt  __test.cpp  assert.cpp  assert.hpp
src/utilities/io/: CMakeLists.txt  __test.cpp  imageio.cpp  imageio.hpp  meshio.cpp  meshio.hpp
src/utilities/math/: CMakeLists.txt  __test.cpp  mathfunctions.cpp  mathfunctions.hpp
src/utilities/types/: CMakeLists.txt  __test.cpp  landmark.cpp  landmark.hpp  triple.cpp  triple.hpp
src/utils/: bipMask.h  bipMiscellaneous.h  bipUtils.h
