
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( ProgramName "crop_img_mask" )
PROJECT( ${ProgramName} )

FIND_PACKAGE(ITK REQUIRED)
IF (ITK_FOUND)
 INCLUDE( ${ITK_USE_FILE} )
ENDIF(ITK_FOUND)

FIND_PACKAGE( OpenMP REQUIRED)
IF(OPENMP_FOUND)
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ENDIF()

INCLUDE_DIRECTORIES(
 ${CMAKE_CURRENT_SOURCE_DIR} 
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty
)

SET( SRCS
)

ADD_EXECUTABLE( ${ProgramName}
    main.cpp 
    ${SRCS} 
)

LINK_DIRECTORIES(
 ${PROJECT_BINARY_DIR}/lib
)

TARGET_LINK_LIBRARIES( ${ProgramName}
    ${ITK_LIBRARIES}
    X11 
)
