CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# INCLUDE_DIRECTORIES(
#     ${CMAKE_CURRENT_SOURCE_DIR}/io
#     ${CMAKE_CURRENT_SOURCE_DIR}/detection
#     ${CMAKE_CURRENT_SOURCE_DIR}/matching
#     ${CMAKE_CURRENT_SOURCE_DIR}/registration
#     ${CMAKE_CURRENT_SOURCE_DIR}/atlas
# )

ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(detection)
ADD_SUBDIRECTORY(matching)
ADD_SUBDIRECTORY(registration)
ADD_SUBDIRECTORY(atlas)
ADD_SUBDIRECTORY(matching_maxd_prob)
ADD_SUBDIRECTORY(description_fast)
