CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# INCLUDE_DIRECTORIES(
#     ${CMAKE_CURRENT_SOURCE_DIR}/debug
#     ${CMAKE_CURRENT_SOURCE_DIR}/io
#     ${CMAKE_CURRENT_SOURCE_DIR}/math
#     ${CMAKE_CURRENT_SOURCE_DIR}/types
# )

ADD_SUBDIRECTORY(debug)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(types)
