CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( ProgramName "run_length_parallel" )
PROJECT( ${ProgramName} )

FIND_PACKAGE (ITK REQUIRED)
IF (ITK_FOUND)
	INCLUDE( ${ITK_USE_FILE} )
ENDIF(ITK_FOUND)

find_package( OpenMP REQUIRED)
if(OPENMP_FOUND)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR} 
)

SET( SRCS
)

ADD_EXECUTABLE( ${ProgramName}
    run_length_parallel.cxx 
    ${SRCS} 
)

LINK_DIRECTORIES(
	${PROJECT_BINARY_DIR}/lib
)

TARGET_LINK_LIBRARIES( ${ProgramName}
   	${ITK_LIBRARIES}
	nlopt
   	X11	
)
